# MiniKick

./: .gitignore  MiniKick_Backup_2026-06-19_20-07-50.json  MiniKick_Backup_2026-06-22_21-26-16.json  README.md  SECURITY.md  SUMMARY.md  api_oficial.py  auth_kick.py  chat_reader.py  init.sh  installer.iss  license.txt  main.py  nuevo.json  pyinstaller.txt  pyproject.toml  requirements.txt  style.qss  triggers.json  venv_install.txt  version.json
assets/html/: overlay.html
assets/overlays/: chat.html  music.html  rewards.html  triggers_overlay.html
assets/web/: auth.html  success.html
backend/: auth.py  auth_manager.py  chat.py  chat_manager.py  config.json  database.py  default_es.py  default_es_locale.py  index.html  interfaces.py  kick_api_client.py  kick_core.py  kick_websocket.py  main.py  obs_server.py  overlay_server.py  rewards_listener.py  session.json  sql_manager.py  sqlite_manager.py  tts.py  tts_manager.py  tts_worker.py  updater_manager.py
backend/TTS/: local_tts.py  web_tts.py
backend/config/: api_keys.py  default_en_locale.py  default_es_locale.py  version.py
backend/connection/: auth.py  config.py  kick_api.py
backend/controllers/: __init__.py  chat_controller.py  command_controller.py  dashboard_controller.py  log_controller.py  music_controller.py  network_controller.py  rewards_controller.py  (+4 more)
core/: db.js  index.js  package-lock.json  package.json
frontend/: gui.py  main_frontend.py  main_window.py  main_window_view.py  sidebar.py  style.qss  theme.py  utils.py
locales/: en.json  es.json
test/: app_consola.py  test_kick_json.py
(+234 files in other folders)
